--- a/OKRPerformanceManagement.Web/Views/HR/EditEmployee.cshtml
+++ b/OKRPerformanceManagement.Web/Views/HR/EditEmployee.cshtml
@@ -173,7 +173,63 @@
     </div>
 </div>
 
+<!-- Edit Confirmation Modal -->
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content border-0 shadow-lg">
+            <div class="modal-header bg-primary text-white border-0">
+                <h5 class="modal-title d-flex align-items-center" id="editModalLabel">
+                    <i class="fas fa-user-edit me-2"></i> Confirm Employee Update
+                </h5>
+            </div>
+            <div class="modal-body text-center py-4">
+                <div class="mb-4">
+                    <div class="d-inline-flex align-items-center justify-content-center bg-primary bg-opacity-10 rounded-circle" style="width: 80px; height: 80px;">
+                        <i class="fas fa-user-edit fa-2x text-primary"></i>
+                    </div>
+                </div>
+                <h6 class="mb-3 text-dark">
+                    Are you sure you want to update <strong class="text-primary" id="editEmployeeName"></strong>?
+                </h6>
+                <div class="alert alert-info border-0 bg-light">
+                    <i class="fas fa-info-circle text-info me-2"></i>
+                    <strong>Update Information:</strong> This will modify the employee's details in the system.
+                </div>
+            </div>
+            <div class="modal-footer border-0 justify-content-center pb-4">
+                <button type="button" class="btn btn-outline-secondary me-3" data-bs-dismiss="modal">
+                    <i class="fas fa-arrow-left me-1"></i> Cancel
+                </button>
+                <button type="button" class="btn btn-primary px-4" id="confirmEditBtn">
+                    <i class="fas fa-save me-1"></i> Yes, Update
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    
+    <script>
+        $(document).ready(function() {
+            // Get employee name from the form
+            var firstName = $('#FirstName').val();
+            var lastName = $('#LastName').val();
+            $('#editEmployeeName').text(firstName + ' ' + lastName);
+
+            // Override form submission to show modal first
+            $('form').on('submit', function(e) {
+                e.preventDefault();
+                var modal = new bootstrap.Modal(document.getElementById('editModal'));
+                modal.show();
+            });
+
+            $('#confirmEditBtn').click(function() {
+                // Submit the form
+                $('form').off('submit').submit();
+            });
+        });
+    </script>
 }
 
